--- a/daily-animation/daily-animation.css
+++ b/daily-animation/daily-animation.css
@@ -53,6 +53,7 @@ footer {
     justify-content: center;
     align-items: center;
     font-size: 36px;
+    position: relative;
 }
 
 .inactive {
@@ -269,5 +270,147 @@ footer {
 }
 
 
+@keyframes clock-wise-second {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg)}
+}
+
+@keyframes clock-wise-minute {
+    from {transform: rotate(-2deg);}
+    to {transform: rotate(0deg)}
+}
+
+@keyframes clock-wise-hour {
+    from {transform: rotate(26deg);}
+    to {transform: rotate(30deg)}
+}
 
 
+.clock-circle {
+    width: 200px;
+    height: 200px;
+    border: 8px solid #000;
+    border-radius: 50%;
+    position: relative;
+    box-sizing: content-box;
+    background-color: #fff;
+    
+}
+
+
+.hour {
+    width: 0;
+	height: 0;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-top: 60px solid #000;
+    position: absolute;
+    left: 48.5%;
+    top: 50%;
+    transform-origin: 0% 0%;
+    transform: rotate(25deg);
+    animation-name: clock-wise-hour;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+    box-shadow: 0px -6px 0 #000;
+    border-radius: 2px;
+}
+
+.minute {
+    /***width: 5px;
+    padding-bottom: 140px;
+    background-color: #000;***/
+    position: absolute;
+    left: 48.5%;
+    bottom: 50%;
+    transform-origin: 0% 100%;
+    transform: rotate(-2deg);  
+    animation-name: clock-wise-minute;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+    animation-delay: 9s;
+    border-left: 3px solid transparent;
+    border-right: 3px solid transparent;
+    border-bottom: 90px solid #000;
+    box-shadow: 0px 10px 0 #000;
+    border-radius: 2px;
+}
+
+.second {
+    width: 1px;
+    padding-bottom: 100px;
+    background-color: red;
+    position: absolute;
+    left: 50%;
+    bottom: 49%;
+    transform-origin: 0% 100%;
+    transform: rotate(0deg);  
+    animation-name: clock-wise-second;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease-in-out;
+    
+}
+
+.clock-point {
+    width: 3px;
+    padding-bottom: 200px; 
+    position: absolute;
+    left: 50%;
+    transform-origin: 0% 50%;
+    background-color: #000;
+}
+
+.inner-circle {
+    width: 180px;
+    height: 180px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%)
+}
+
+
+
+.clock-point:nth-child(2) {
+    transform-origin: 0% 50%;
+    transform: rotate(30deg);
+}
+
+.clock-point:nth-child(3) {
+    transform-origin: 0% 50%;
+    transform: rotate(60deg);
+}
+
+.clock-point:nth-child(4) {
+    transform-origin: 0% 50%;
+    transform: rotate(90deg);
+}
+
+.clock-point:nth-child(5) {
+    transform-origin: 0% 50%;
+    transform: rotate(120deg);
+}
+
+.clock-point:nth-child(6) {
+    transform-origin: 0% 50%;
+    transform: rotate(150deg);
+}
+
+.day3 {
+    background-color: rgba(251, 246, 211, 0.7);
+}
+
+.shadow {
+    width: 0;
+    height:0 ;
+    border-top: 220px solid rgba(212, 206, 208, 0.2);
+	border-right: 350px solid transparent;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
