--- a/react/random-quote/src/index.css
+++ b/react/random-quote/src/index.css
@@ -12,34 +12,10 @@ body {
   position: relative;
 }
 
-img {
-  padding: 0;
-  margin: 0;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
-.author {
-  font-size: 12px;
-  padding-left: 5px;
-}
-
-img, .author {
-  float: left;
-}
-
-.quote {
-  clear: both;
-  font-size: 20px;
-  height: calc(100% - 50px);
-  padding-top: 10px;
-}
-
-.container {
+#quote-box {
   width: 500px;
   height: 250px;
-  margin: calc(25% - 125px) auto;
+  margin: calc(50vh - 125px) auto;
   padding: 25px 20px;
   border: 2px solid white;
   border-radius: 5px;
@@ -47,12 +23,43 @@ img, .author {
   position: relative;
 }
 
+.image-cropper {
+  padding: 0;
+  margin: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  float: left;
+}
+
+.avatar {
+  display: inline;
+  margin: 0 auto;
+  height: 100%;
+  width: auto;
+}
+
+.author {
+  font-size: 12px;
+  padding-left: 5px;
+  margin-left: 45px;
+  line-height: 0;
+}
+
+.quote {
+  clear: both;
+  font-size: 20px;
+  /* height: calc(100% - 50px); */
+  padding-top: 10px;
+}
+
 img .right-column {
   float: left;
 }
 
-@media only screen and (max-width: 480px) {
-  .container {
-    width: 95%;
+@media only screen and (max-width: 600px) {
+  #quote-box {
+    width: 85%
   }
 }
