--- a/drum-kit/src/index.css
+++ b/drum-kit/src/index.css
@@ -34,7 +34,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: blue;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -44,7 +44,7 @@ body {
   content: "";
   height: 26px;
   width: 26px;
-  left: 4px;
+  right: 4px;
   bottom: 4px;
   background-color: white;
   -webkit-transition: .4s;
@@ -52,17 +52,17 @@ body {
 }
 
 input:checked+.slider {
-  background-color: #2196F3;
+  background-color: #ccc;
 }
 
 input:focus+.slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #ccc;
 }
 
 input:checked+.slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(-26px);
+  -ms-transform: translateX(-26px);
+  transform: translateX(-26px);
 }
 
 /* Rounded sliders */
