--- a/drum-kit/src/index.css
+++ b/drum-kit/src/index.css
@@ -74,3 +74,9 @@ input:checked+.slider:before {
 .slider .round:before {
   border-radius: 50%;
 }
+
+/* LAYOUT */
+
+* {
+  outline: 1px solid grey;
+}
