--- a/drum-kit/src/index.css
+++ b/drum-kit/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,12 +10,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.played {
-  height: 50px;
-}
-
-.playing {
-  height: 100px;
+* {
+  margin: 0;
+  padding: 0;
+  /* outline: 1px solid blue; */
 }
 
 .switch {
@@ -34,7 +36,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: blue;
+  background-color: transparent;
+  border: 1px solid white;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -46,7 +49,8 @@ body {
   width: 26px;
   right: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: transparent;
+  border: 1px solid white;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -67,16 +71,77 @@ input:checked+.slider:before {
 
 /* Rounded sliders */
 
-.slider .round {
+.round {
   border-radius: 34px;
+  height: 34px;
 }
 
-.slider .round:before {
+.round:before {
   border-radius: 50%;
 }
 
 /* LAYOUT */
 
-* {
+/* * {
   outline: 1px solid grey;
+} */
+
+.container-main {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.container-display {
+  margin-top: 120px;
+  margin-bottom: 100px;
+}
+
+.container-display p {
+  /* outline: 3px solid blue; */
+  text-align: center;
+  font-size: 36px;
+  color: white;
+  letter-spacing: 10px;
+}
+
+.container-drum-pads, .container-settings {
+  text-align: center;
+}
+
+.container-settings button {
+  font-size: 20px;
+  padding: 0 20px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  margin-bottom: 20px;
+}
+
+.container-settings button:first-child {
+  border-right: 1px solid white;
+}
+
+.drum-pad {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 25px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin: 5px 10px 50px 10px;
+  color: white;
+}
+
+.volSlider {
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+body {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to bottom, #09203f 0%, #537895 100%);
 }
