--- a/pomodoro/src/index.css
+++ b/pomodoro/src/index.css
@@ -1,3 +1,45 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,13 +52,65 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-#break_label, #session_label {
-  float: left;
-  margin-right: 50px;
+html {
+  height: 100%;
 }
 
-#setting, #display, #control {
-  border: 1px solid blue;
-  width: 500px;
-  height: 100px;
+body {
+  height: 100%;
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  background-repeat: no-repeat;
+}
+
+.container {
+  width: 350px;
+  margin: 50px auto;
+}
+
+.container-settings {
+  float: left;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.container-display {
+  clear: both;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.container h1 {
+  text-align: center;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+
+.container-session, .container-break {
+  width: 50%;
+  text-align: center;
+}
+
+.container-session, .container-break {
+  float: left;
+}
+
+#time-label {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+#time-left {
+  font-size: 50px;
+}
+
+.container-control {
+  text-align: center;
+}
+
+.play {
+  padding-right: 100px;
+}
+
+.play, .reset {
+  font-size: 50px;
 }
